--- a/ee09_2020_czerwiec_4/styl.css
+++ b/ee09_2020_czerwiec_4/styl.css
@@ -1,19 +1,16 @@
-body
-{
+body{
     font-family: Garamond;
     margin: 0;
 }
 
-#lewy1
-{
+#lewy1{
     height: 500px;
     width: 25%;
     background-color: Lavender;
     float: left;
 }
 
-#lewy2
-{
+#lewy2{
     height: 300px;
     width: 25%;
     background-color: Lavender;
@@ -21,8 +18,7 @@ body
 }
 
 
-#prawy1
-{
+#prawy1{
     height: 150px;
     width: 75%;
     background-color: Indigo;
@@ -33,8 +29,7 @@ body
 }
 
 
-#prawy2
-{
+#prawy2{
     height: 650px;
     width: 75%;
     background-color: Lavender;
@@ -44,8 +39,7 @@ body
 }
 
 
-#stopka
-{
+#stopka{
     background-color: Indigo;
     color: white;
     text-align: right;
@@ -61,8 +55,7 @@ img{
     margin: 10px;
 }
 
-img:hover
-{
+img:hover{
     padding: 4px;
     border: 1px solid indigo;
 }
